--- a/edm/package.json
+++ b/edm/package.json
@@ -20,7 +20,9 @@
     "@angular/platform-browser-dynamic": "~9.1.1",
     "@angular/router": "~9.1.1",
     "bootstrap": "^4.4.1",
+    "crypto-js": "^4.0.0",
     "jquery": "^3.4.1",
+    "ngx-swiper-wrapper": "^9.0.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
