--- a/edm/package.json
+++ b/edm/package.json
@@ -22,6 +22,7 @@
     "bootstrap": "^4.4.1",
     "crypto-js": "^4.0.0",
     "jquery": "^3.4.1",
+    "ng5-slider": "^1.2.4",
     "ngx-swiper-wrapper": "^9.0.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
